tests/spec/lex/snapshots/else_on_next_line.snap
---
source: tests/spec/lex/mod.rs
description: |-
  if x { 1 }
      else { 2 }
---
LexResult {
    tokens: [
        Token {
            kind: If,
            text: "if",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: Identifier,
            text: "x",
            byte_offset: 3,
            byte_length: 1,
        },
        Token {
            kind: LeftCurlyBrace,
            text: "{",
            byte_offset: 5,
            byte_length: 1,
        },
        Token {
            kind: Integer,
            text: "1",
            byte_offset: 7,
            byte_length: 1,
        },
        Token {
            kind: RightCurlyBrace,
            text: "}",
            byte_offset: 9,
            byte_length: 1,
        },
        Token {
            kind: Else,
            text: "else",
            byte_offset: 15,
            byte_length: 4,
        },
        Token {
            kind: LeftCurlyBrace,
            text: "{",
            byte_offset: 20,
            byte_length: 1,
        },
        Token {
            kind: Integer,
            text: "2",
            byte_offset: 22,
            byte_length: 1,
        },
        Token {
            kind: RightCurlyBrace,
            text: "}",
            byte_offset: 24,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 25,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
