tests/spec/lex/snapshots/enum_with_variants.snap
---
source: tests/spec/lex/mod.rs
description: |
  
  enum Result<T, E> {
    Ok(T),
    Err(E),
  }
---
LexResult {
    tokens: [
        Token {
            kind: Enum,
            text: "enum",
            byte_offset: 1,
            byte_length: 4,
        },
        Token {
            kind: Identifier,
            text: "Result",
            byte_offset: 6,
            byte_length: 6,
        },
        Token {
            kind: LeftAngleBracket,
            text: "<",
            byte_offset: 12,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "T",
            byte_offset: 13,
            byte_length: 1,
        },
        Token {
            kind: Comma,
            text: ",",
            byte_offset: 14,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "E",
            byte_offset: 16,
            byte_length: 1,
        },
        Token {
            kind: RightAngleBracket,
            text: ">",
            byte_offset: 17,
            byte_length: 1,
        },
        Token {
            kind: LeftCurlyBrace,
            text: "{",
            byte_offset: 19,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "Ok",
            byte_offset: 23,
            byte_length: 2,
        },
        Token {
            kind: LeftParen,
            text: "(",
            byte_offset: 25,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "T",
            byte_offset: 26,
            byte_length: 1,
        },
        Token {
            kind: RightParen,
            text: ")",
            byte_offset: 27,
            byte_length: 1,
        },
        Token {
            kind: Comma,
            text: ",",
            byte_offset: 28,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "Err",
            byte_offset: 32,
            byte_length: 3,
        },
        Token {
            kind: LeftParen,
            text: "(",
            byte_offset: 35,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "E",
            byte_offset: 36,
            byte_length: 1,
        },
        Token {
            kind: RightParen,
            text: ")",
            byte_offset: 37,
            byte_length: 1,
        },
        Token {
            kind: Comma,
            text: ",",
            byte_offset: 38,
            byte_length: 1,
        },
        Token {
            kind: RightCurlyBrace,
            text: "}",
            byte_offset: 40,
            byte_length: 1,
        },
        Token {
            kind: Semicolon,
            text: "",
            byte_offset: 41,
            byte_length: 0,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 42,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
