tests/spec/lex/snapshots/file_comment.snap
---
source: tests/spec/lex/mod.rs
description: //! This is a file comment
---
LexResult {
    tokens: [
        Token {
            kind: FileComment,
            text: "This is a file comment",
            byte_offset: 0,
            byte_length: 26,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 26,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
