tests/spec/lex/snapshots/file_comment_bare.snap
---
source: tests/spec/lex/mod.rs
description: //!
---
LexResult {
    tokens: [
        Token {
            kind: FileComment,
            text: "",
            byte_offset: 0,
            byte_length: 3,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 3,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
