tests/spec/lex/snapshots/file_comment_strips_one_leading_space.snap
---
source: tests/spec/lex/mod.rs
description: |-
  //!  two spaces
  //!no space
---
LexResult {
    tokens: [
        Token {
            kind: FileComment,
            text: " two spaces",
            byte_offset: 0,
            byte_length: 15,
        },
        Token {
            kind: FileComment,
            text: "no space",
            byte_offset: 16,
            byte_length: 11,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 27,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
