tests/spec/lex/snapshots/file_comment_vs_comment_vs_doc_comment.snap
---
source: tests/spec/lex/mod.rs
description: |-
  //! file comment
  // comment
  /// doc
---
LexResult {
    tokens: [
        Token {
            kind: FileComment,
            text: "file comment",
            byte_offset: 0,
            byte_length: 16,
        },
        Token {
            kind: Comment,
            text: "// comment",
            byte_offset: 17,
            byte_length: 10,
        },
        Token {
            kind: DocComment,
            text: "doc",
            byte_offset: 28,
            byte_length: 7,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 35,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
